Fix blog calendar overlap in mobile

--- a/apps/fabric-website/src/pages/BlogPage/BlogItem.scss
+++ b/apps/fabric-website/src/pages/BlogPage/BlogItem.scss
@@ -52,7 +52,7 @@ $BlogItem-dateColumnWidth: 120px;
   .BlogItem-contentColumn {
     max-width: 50em;
     width: 100%;
-    padding-top: 60px;
+    padding-top: 108px;
   }
 
   .BlogItem-title {
